--- a/extrator/.gitignore
+++ b/extrator/.gitignore
@@ -1,1 +1,11 @@
-node_modules
+node_modules/
+
+#vs code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+# Local History for Visual Studio Code
+.history/
