--- a/extrator/ormconfig.json
+++ b/extrator/ormconfig.json
@@ -8,6 +8,9 @@
   "entities": [
     "src/entity/**/*.ts"
   ],
+  "migrations": [
+    "src/migration/*.ts"
+  ],
   "cli": {
     "entitiesDir": "src/entity",
     "migrationsDir": "src/migration",
