--- a/extrator/package.json
+++ b/extrator/package.json
@@ -10,7 +10,7 @@
     "migration:revert": "npm run ts-node -- ./node_modules/typeorm/cli.js migration:revert"
   },
   "author": "",
-  "license": "ISC",
+  "license": "private",
   "devDependencies": {
     "@types/node": "^13.13.5",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
