--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  extended_image: ^0.8.0
+  http: ^0.12.1
+  scrollable_positioned_list: ^0.1.6
+  visibility_detector: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
