--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -25,7 +25,9 @@ dependencies:
     sdk: flutter
   extended_image: ^0.8.0
   http: ^0.12.1
-  scrollable_positioned_list: ^0.1.6
+  quiver: ^2.1.3
+  progress_dialog: ^1.2.3
+  diagonal_scrollview: ^0.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
