--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   quiver: ^2.1.3
   progress_dialog: ^1.2.3
   diagonal_scrollview: ^0.1.0
-
+  intl: ^0.16.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
