--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   progress_dialog: ^1.2.3
   diagonal_scrollview: ^0.1.0
   intl: ^0.16.1
+  expandable: ^4.1.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
