--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   diagonal_scrollview: ^0.1.0
   intl: ^0.16.1
   expandable: ^4.1.4
+  dio: ^3.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
