--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   intl: ^0.16.1
   expandable: ^4.1.4
   dio: ^3.0.9
+  extended_future_builder: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
