--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
   dio: ^3.0.9
   extended_future_builder: any
   pedantic: ^1.8.0
+  flutter_bloc: ^4.0.1
+  firebase_auth: ^0.16.1
+  flutter_facebook_login: ^3.0.0
+  equatable: ^1.2.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
