--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^0.16.1
   flutter_facebook_login: ^3.0.0
   equatable: ^1.2.0
+  flutter_signin_button: ^1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
