--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   equatable: ^1.2.0
   flutter_signin_button: ^1.0.0
+  google_sign_in: ^4.5.1
 
 
   # The following adds the Cupertino Icons font to your application.
