--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^1.2.0
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.5.1
+  get_it: ^4.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
