parse manga from manga page because not always manga is on category

--- a/extrator/ormconfig.json
+++ b/extrator/ormconfig.json
@@ -5,6 +5,9 @@
   "username": "root",
   "password": "123456",
   "database": "manga",
+  "migrations": [
+    "src/migration/*.ts"
+  ],
   "cli": {
     "entitiesDir": "src/entity",
     "migrationsDir": "src/migration",
