--- a/extrator/package.json
+++ b/extrator/package.json
@@ -32,6 +32,7 @@
     "@types/imagemin-jpegtran": "^5.0.0",
     "axios": "^0.19.2",
     "mysql": "^2.18.1",
+    "node-html-parser": "^1.2.20",
     "reflect-metadata": "^0.1.13",
     "short-unique-id": "^3.0.0-rc1",
     "slugify": "^1.4.0",
