--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,11 @@
+TYPE_ORM_LOGGING=true
+PORT=4000
+
 TYPE_ORM_LOGGING=false
+TYPEORM_CONNECTION=mysql
+TYPEORM_HOST=localhost
+TYPEORM_PORT=3306
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=123456
+TYPEORM_DATABASE=manga
+TYPEORM_ENTITIES=dist/entity/**/*.ts,dist/entity/**/*.js
