--- a/api/package.json
+++ b/api/package.json
@@ -19,8 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:run": "node ./node_modules/typeorm/cli.js migration:run"
-
+    "migration:run": "node dist/cli/migrations"
   },
   "dependencies": {
     "@nestjs/common": "^7.0.0",
@@ -29,6 +28,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
     "class-transformer": "^0.2.3",
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.12.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
