--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -28,10 +28,25 @@ http {
   gzip_min_length 256;
   gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/vnd.ms-fontobject application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
-
   server {
     listen 80;
+    server_name example.org;
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  server {
     server_name localhost;
+
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    ssl on;
+    ssl_certificate var/uaimangas/certs/cert.pem;
+    ssl_certificate_key var/uaimangas/certs/cert.key;
+    ssl_client_certificate var/uaimangas/certs/cloudflare.crt;
+    ssl_verify_client on;
 
     location / {
       try_files $uri $uri /static$uri @api;
@@ -56,22 +71,4 @@ http {
     error_page 404 /404.html;
     error_page 500 502 503 504 /50x.html;
   }
-
-  # HTTPS server
-  #
-  #server {
-  #    listen       443 ssl;
-  #    server_name  localhost;
-
-  #    ssl_certificate      cert.pem;
-  #    ssl_certificate_key  cert.key;
-  #    ssl_session_cache    shared:SSL:1m;
-  #    ssl_session_timeout  5m;
-  #    ssl_ciphers  HIGH:!aNULL:!MD5;
-  #    ssl_prefer_server_ciphers  on;
-  #    location / {
-  #        root   html;
-  #        index  index.html index.htm;
-  #    }
-  #}
 }
