only https on nginx

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -44,7 +44,7 @@ http {
 
     ssl on;
     ssl_certificate /var/uaimangas/certs/cert.pem;
-    ssl_certificate_key /var/uaimangas/certs/cert.key;
+    ssl_certificate_key /var/uaimangas/certs/key.pem;
     ssl_client_certificate /var/uaimangas/certs/cloudflare.crt;
     ssl_verify_client on;
 
