--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -45,7 +45,7 @@ http {
     ssl on;
     ssl_certificate /var/uaimangas/certs/cert.pem;
     ssl_certificate_key /var/uaimangas/certs/key.pem;
-    ssl_client_certificate /var/uaimangas/certs/cloudflare.crt;
+    ssl_client_certificate /var/uaimangas/certs/cloudflare.pem;
     ssl_verify_client on;
 
     location / {
