Revert "Update docker-compose.yml"
This reverts commit 900b5737095f4b913f1dba61941e255a59ba1c35.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,10 @@ services:
 
 networks:
   api:
+    driver: overlay
     internal: true
   database_internal:
+    driver: overlay
     internal: true
   nginx:
   database_external:
