Revert "Update docker-compose.yml"
This reverts commit f6291d1aa559ded740266a4ad99e8938fec2d294.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,11 +51,9 @@ services:
 
 networks:
   api:
-    driver: overlay
-    internal: true
+    driver: bridge
   database_internal:
-    driver: overlay
-    internal: true
+    driver: bridge
   nginx:
   database_external:
 
