--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -7,14 +7,10 @@ http {
     server api:3000;
   }
 
-  include mime.types;
   default_type application/octet-stream;
-  root /var/www/mangas/html;
+  root /var/uaimangas/html;
 
   sendfile on;
-  #tcp_nopush     on;
-
-  #keepalive_timeout  0;
   keepalive_timeout 65;
 
   gzip on;
@@ -49,7 +45,7 @@ http {
     ssl_verify_client on;
 
     location / {
-      try_files $uri $uri /static$uri @api;
+      try_files $uri $uri @api;
     }
 
     location @api {
