error on run migration

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:12 AS builder
 WORKDIR /manga/api
 COPY ./package*.json ./
-COPY ./env ./
-COPY ./ormconfig.json ./
+COPY ./.env ./
+COPY ./.ormconfig.json ./
 RUN npm install
 COPY . .
 RUN npm run build
