--- a/extrator/.vscode/launch.json
+++ b/extrator/.vscode/launch.json
@@ -5,7 +5,8 @@
       "type": "node",
       "request": "launch",
       "args": [
-        "${workspaceRoot}/src/main.ts"
+        "${workspaceRoot}/src/main.ts",
+        "releases"
       ],
       "runtimeArgs": [
         "--nolazy",
