--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -74,4 +74,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
 }
