--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+5
+version: 1.1.0+6
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -26,23 +26,25 @@ dependencies:
   extended_image: ^0.8.0
   http: ^0.12.1
   quiver: ^2.1.3
-  progress_dialog: ^1.2.3
+  progress_dialog: ^1.2.4
   diagonal_scrollview: ^0.1.0
+  # diagonal_scrollview: ^0.2.0
   intl: ^0.16.1
   expandable: ^4.1.4
   dio: ^3.0.9
   extended_future_builder: any
   pedantic: ^1.8.0
-  flutter_bloc: ^4.0.1
+  flutter_bloc: ^5.0.1
   firebase_auth: ^0.16.1
   flutter_facebook_login: ^3.0.0
-  equatable: ^1.2.0
+  equatable: ^1.2.2
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.5.1
   get_it: ^4.0.2
   flutter_native_admob: ^2.1.0
   package_info: ^0.4.1
-
+  firebase_messaging: ^6.0.16
+  flushbar: ^1.10.4
 
 
   # The following adds the Cupertino Icons font to your application.
