--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+7
+version: 1.3.0+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -41,7 +41,8 @@ dependencies:
   flutter_signin_button: ^1.0.0
   google_sign_in: ^4.5.1
   get_it: ^4.0.2
-  flutter_native_admob: ^2.1.0
+  # firebase_admob: ^0.9.3+2
+  admob_flutter: "^1.0.0-beta.5"
   package_info: ^0.4.1
   firebase_messaging: ^6.0.16
   flushbar: ^1.10.4
