--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   package_info: ^0.4.1
   firebase_messaging: ^6.0.16
   flushbar: ^1.10.4
+  font_awesome_flutter: ^8.8.1
+  url_launcher: ^5.5.0
 
 
   # The following adds the Cupertino Icons font to your application.
