--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flushbar: ^1.10.4
   font_awesome_flutter: ^8.8.1
   url_launcher: ^5.5.0
+  flutter_markdown: ^0.4.2
+  shared_preferences: ^0.5.8
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -79,6 +81,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/md/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
