--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -46,6 +46,10 @@ http {
 
     location / {
       try_files $uri $uri @api;
+
+      types {
+        text/plain sh;
+      }
     }
 
     location @api {
