--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -47,9 +47,7 @@ http {
     location / {
       try_files $uri $uri @api;
 
-      types {
-        text/plain sh;
-      }
+      default_type text/plain;
     }
 
     location @api {
