--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: nginx
     volumes:
       - ./nginx/config/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/config/mime.types:/etc/nginx/mime.types
       - ./nginx/certs:/var/uaimangas/certs
       - ./nginx/html:/var/uaimangas/html
     ports:
