--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -9,6 +9,7 @@ http {
 
   default_type application/octet-stream;
   root /var/uaimangas/html;
+  include /etc/nginx/mime.types;
 
   sendfile on;
   keepalive_timeout 65;
@@ -46,8 +47,6 @@ http {
 
     location / {
       try_files $uri $uri @api;
-
-      default_type text/plain;
     }
 
     location @api {
