add temporary index.html

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -46,7 +46,8 @@ http {
     ssl_verify_client on;
 
     location / {
-      try_files $uri $uri index.html @api;
+      index index.html;
+      try_files $uri $uri @api;
     }
 
     location @api {
