add temporary index.html

--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -46,8 +46,7 @@ http {
     ssl_verify_client on;
 
     location / {
-      index index.html;
-      try_files $uri $uri @api;
+      try_files $uri $uri /index.html @api;
     }
 
     location @api {
