--- a/nginx/config/nginx.conf
+++ b/nginx/config/nginx.conf
@@ -46,7 +46,7 @@ http {
     ssl_verify_client on;
 
     location / {
-      try_files $uri $uri /index.html @api;
+      try_files $uri $uri @api;
     }
 
     location @api {
