--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,12 +8,8 @@ on:
 
 jobs:
   build:
-
+    name: Build APK
     runs-on: ubuntu-latest
-
-    container:
-      image:  google/dart:latest
-
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -21,8 +17,6 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.9.1+hotfix.6'
-    - name: Install dependencies
-      run: flutter pub get
-    - name: Run analyzer
-      run: flutter analyze
+        flutter-version: '1.7.8+hotfix.4'
+    - run: flutter pub get
+    - run: flutter analyze
