--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: Build APK
     runs-on: ubuntu-latest
+    
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -19,4 +20,6 @@ jobs:
       with:
         flutter-version: '1.7.8+hotfix.4'
     - run: flutter pub get
+      working-directory: ./mobile
     - run: flutter analyze
+      working-directory: ./mobile
