--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,6 +19,7 @@ jobs:
     - uses: subosito/flutter-action@v1.3.2
       with:
         flutter-version: '1.9.1+hotfix.6'
+        channel: beta 
     - run: flutter pub get
       working-directory: ./mobile
     - run: flutter analyze
