--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -16,10 +16,7 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-    - uses: subosito/flutter-action@v1.3.2
-      with:
-        flutter-version: '1.9.1+hotfix.6'
-        channel: beta 
+    - uses: steebchen/flutter@v1.1.0
     - run: flutter pub get
       working-directory: ./mobile
     - run: flutter analyze
