--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -8,17 +8,18 @@ on:
 
 jobs:
   build:
-    name: Build APK
+    name: Analyze project
     runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-java@v1
+
+    - name: install dependencies
+      uses: steebchen/flutter@v1.1.0
       with:
-        java-version: '12.x'
-    - uses: steebchen/flutter@v1.1.0
-    - run: flutter pub get
-      working-directory: ./mobile
-    - run: flutter analyze
-      name: Analyze code
-      working-directory: ./mobile
+        args: pub get
+
+    - name: analyze project
+      uses: steebchen/flutter@v1.1.0
+      with:
+        args: analyze
