--- a/mobile/android/key.properties
+++ b/mobile/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=//Manga09.
 keyPassword=//Manga09.
 keyAlias=key0
-storeFile=Y:/Projetos/manga/manga.jks
+storeFile=../../../manga.jks
