--- a/api/.env.prod
+++ b/api/.env.prod
@@ -8,6 +8,7 @@ TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=tesute9538
 TYPEORM_DATABASE=manga
 TYPEORM_ENTITIES=dist/entity/**/*.ts,dist/entity/**/*.js
+TYPEORM_MIGRATIONS=dist/migration/*.ts,dist/migration/*.js
 
 
 MYSQL_ROOT_PASSWORD=tesute9538
