Faltando migrações no ambiente local

--- a/api/.env
+++ b/api/.env
@@ -8,3 +8,4 @@ TYPEORM_USERNAME=root
 TYPEORM_PASSWORD=123456
 TYPEORM_DATABASE=manga
 TYPEORM_ENTITIES=dist/entity/**/*.ts,dist/entity/**/*.js
+TYPEORM_MIGRATIONS=dist/migration/*.ts,dist/migration/*.js
